--- a/buses.html
+++ b/buses.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -14,7 +13,44 @@
     />
     <title>Available Bus</title>
   </head>
-  <body>
+  <body style="margin-top: 80px">
+    <div class="navbar">
+      <img
+        src="https://bdtickets.com/images/logo-new-2.png"
+        alt="Logo"
+        width="150px"
+      />
+      <div class="links">
+        <div class="link">
+          <i class="fas fa-bus"></i>
+          <p>Bus</p>
+        </div>
+        <div class="link">
+          <i class="fas fa-plane"></i>
+          <p>Air</p>
+        </div>
+        <div class="link">
+          <i class="fas fa-ship"></i>
+          <p>Ship</p>
+        </div>
+        <div class="link">
+          <i class="fas fa-bed"></i>
+          <p>Hotel</p>
+        </div>
+      </div>
+      <div class="call">
+        <i class="fa-solid fa-phone"></i>
+        <div>
+          <p>Call To Book</p>
+          <p>16460</p>
+        </div>
+      </div>
+      <div class="my-bookings">
+        <i class="fa-solid fa-gear"></i>
+        <p>My Bookings</p>
+      </div>
+      <div class="profile"><i class="fa-solid fa-user"></i></div>
+    </div>
     <a class="home" href="index.html"><i class="fa-solid fa-house"></i></a>
     <h1 style="text-align: center; padding: 10px">Available Buses</h1>
     <div class="show-buses"></div>
