add date previous value

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             <label for="from">Journey Date</label>
             <input class="date-input date" type="date" id="from" />
           </div>
-          <div class="to">
+          <div class="to" style="opacity: 0.4">
             <label for="to">Return Date</label>
-            <input class="date-input" type="date" id="to" />
+            <input class="date-input date-return" type="date" id="to" />
           </div>
         </div>
         <div class="tranding-place-section">
