cursor not allow setup

--- a/index.html
+++ b/index.html
@@ -105,9 +105,14 @@
             <label for="from">Journey Date</label>
             <input class="date-input date" type="date" id="from" />
           </div>
-          <div class="to" style="opacity: 0.4">
-            <label for="to">Return Date</label>
-            <input class="date-input date-return" type="date" id="to" />
+          <div class="to" style="opacity: 0.4; cursor: not-allowed">
+            <label for="to" style="cursor: not-allowed">Return Date</label>
+            <input
+              style="cursor: not-allowed"
+              class="date-input date-return"
+              type="date"
+              id="to"
+            />
           </div>
         </div>
         <div class="tranding-place-section">
