loading screen added

--- a/buses.html
+++ b/buses.html
@@ -13,7 +13,7 @@
     />
     <title>Available Bus</title>
   </head>
-  <body style="margin-top: 80px">
+  <body>
     <div class="navbar">
       <img
         src="https://bdtickets.com/images/logo-new-2.png"
@@ -51,9 +51,18 @@
       </div>
       <div class="profile"><i class="fa-solid fa-user"></i></div>
     </div>
-    <a class="home" href="index.html"><i class="fa-solid fa-house"></i></a>
-    <h1 style="text-align: center; padding: 10px">Available Buses</h1>
-    <div class="show-buses"></div>
+    <div class="container" style="margin-top: 80px">
+      <a class="home" href="index.html"><i class="fa-solid fa-house"></i></a>
+      <h1 style="text-align: center; padding: 10px">Available Buses</h1>
+      <div class="show-buses"></div>
+    </div>
+    <div class="loader">
+      <div class="outside"></div>
+      <div class="inside"></div>
+      <div class="dot1"></div>
+      <div class="dot2"></div>
+      <h3 class="h3">Searching</h3>
+    </div>
     <script src="busdata.js"></script>
   </body>
 </html>
